--- a/_includes/main.njk
+++ b/_includes/main.njk
@@ -43,6 +43,26 @@
         </div>
 
         <div id="pouch-stack">
+          <div class="pouch"></div>
+          <div class="pouch"></div>
+          <div class="pouch"></div>
+          <div class="pouch"></div>
+          <div class="pouch"></div>
+          <div class="pouch"></div>
+          <div class="pouch"></div>
+          <div class="pouch"></div>
+          <div class="pouch"></div>
+          <div class="pouch"></div>
+          <div class="pouch"></div>
+          <div class="pouch"></div>
+          <div class="pouch"></div>
+          <div class="pouch"></div>
+          <div class="pouch"></div>
+          <div class="pouch"></div>
+          <div class="pouch"></div>
+          <div class="pouch"></div>
+          <div class="pouch"></div>
+          <div class="pouch"></div>
         </div>
       </div>
       <nav id="studio-nav">
