--- a/_includes/subpage.njk
+++ b/_includes/subpage.njk
@@ -1,11 +1,15 @@
 ---
 layout: main
 ---
-<h1>{{ title | safe }}</h1>
+
+<div id="studio-head">
+  <h1><a href="/">Pouch Studio</a></h1>
+  <h2>software (&amp; non-software)<br>that loves paper</h2> 
+</div>
+
+<main>
 
 {{ content | safe }}
 
-<footer>
-  <hr />
-  - <a href="/">home</a>
-</footer>
+</main>
+
