--- a/_includes/index-template.njk
+++ b/_includes/index-template.njk
@@ -3,8 +3,11 @@ layout: main
 ---
 
 <div id="image-container">
+  <div id="background-img"></div>
+  {# <div id="airplane"></div> #}
+  <div id="foreground-img"></div>
   <div id="studio-head">
-    <h1><a href="/">Pouch Studio</a></h1>
+    <h1><a href="/"><img src="/images/pouch-studio.png" width="400" height="49"/></a></h1>
     <h2>software (&amp; non-software)<br>that loves paper</h2> 
   </div>
 
