--- a/_includes/subpage.njk
+++ b/_includes/subpage.njk
@@ -3,7 +3,7 @@ layout: main
 ---
 
 <div id="studio-head">
-  <h1><a href="/">Pouch Studio</a></h1>
+  <h1><a href="/"><img src="/images/pouch-studio.png" width="400" height="49"/></a></h1>
   <h2>software (&amp; non-software)<br>that loves paper</h2> 
 </div>
 
