--- a/css/global.css
+++ b/css/global.css
@@ -1,21 +1,15 @@
 :root {
-  --pouch-title-font-size: 80px;
+  --pouch-title-height: 49px;
   --pouch-nav-font-size: 30px;
-}
 
-@font-face {
-  font-family: 'Dongle';
-  font-style: normal;
-  font-weight: 400;
-  size-adjust: 150%;
-  src: url(/fonts/Dongle-Regular.ttf) format('truetype');
+  --topbottom-padding: 80px;
+  --leftright-padding: 60px;
 }
 
 @font-face {
   font-family: 'IBM Plex Mono';
   font-style: normal;
   font-weight: 400;
-  size-adjust: 90%;
   src: url(/fonts/IBMPlexMono-Regular.ttf) format('truetype');
 }
 
@@ -24,7 +18,6 @@
   font-family: 'IBM Plex Mono';
   font-style: italic;
   font-weight: 400;
-  size-adjust: 90%;
   src: url(/fonts/IBMPlexMono-Italic.ttf) format('truetype');
 }
 
@@ -32,7 +25,6 @@
   font-family: 'IBM Plex Mono';
   font-style: normal;
   font-weight: 700;
-  size-adjust: 90%;
   src: url(/fonts/IBMPlexMono-Medium.ttf) format('truetype');
 }
 
@@ -41,7 +33,6 @@
   font-family: 'IBM Plex Mono';
   font-style: italic;
   font-weight: 700;
-  size-adjust: 90%;
   src: url(/fonts/IBMPlexMono-MediumItalic.ttf) format('truetype');
 }
 
@@ -67,12 +58,6 @@ a:hover {
   text-decoration: none;
 }
 
-h1,
-h2,
-h3 {
-  line-height: 1.4;
-}
-
 hr {
   border-color: gainsboro;
   border-style: solid;
@@ -85,39 +70,59 @@ ul {
 
 #container {
   margin: 0;
-  padding: 55px 45px;
+  padding: var(--topbottom-padding) var(--leftright-padding);
   position: relative;
   background-color: white;
 }
 
 #image-container {
   position: relative;
-  background-image: url(/images/drawing.png);
-  background-size: 1202px 970px;
-  background-position: 200px 20px;
   width: 1402px;
   height: 1070px;
   max-width: 100%;
-  /* aspect-ratio: 2785 / 2247; */
+}
+
+#background-img {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  background-image: url(/images/background.png);
+  background-size: 1202px 970px;
+  background-position: 200px 20px;
   background-repeat: no-repeat;
-  /* margin: auto; */
-  /* border: 1px solid black; */
-  /* overflow: hidden; */
-  
+}
+
+#foreground-img {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  background-image: url(/images/foreground.png);
+  background-size: 1202px 970px;
+  background-position: 200px 20px;
+  background-repeat: no-repeat;
+}
+
+#airplane {
+  height: 100px;
+  width: 100px;
+  position: absolute;
+  top: 100px;
+  background-color: red;
 }
 
 #studio-head {
-  flex-grow: 1;
+  line-height: 2;
 }
 
 #studio-head h1 {
   margin: 0;
-  font-family: "Dongle", sans-serif;
-  font-weight: normal;
-  font-size: var(--pouch-title-font-size);
-  top: calc(-0.25 * var(--pouch-title-font-size));
   position: relative;
-  text-wrap: nowrap;
+}
+
+#studio-head h1 img {
+  position: relative;
+  left: 1px;
+  
 }
 
 #studio-head h1 a {
@@ -130,17 +135,22 @@ ul {
   font-weight: normal;
   color: #488BC6;
   position: relative;
-  top: calc(-0.68 * var(--pouch-title-font-size));
-  font-size: var(--pouch-nav-font-size);
+  font-size: 24px;
+  margin-top: 10px;
+  line-height: 1.4;
 }
 
 #studio-nav {
-  position: absolute;
-  top: calc(55px + 0.25 * var(--pouch-title-font-size));
+  position: fixed;
+  top: calc(var(--topbottom-padding) + 0.5 * var(--pouch-title-height));
   font-size: var(--pouch-nav-font-size);
   text-align: right;
-  right: 45px;
+  right: var(--leftright-padding);
   z-index: 100;
+}
+
+#studio-nav a {
+  background-color: white;
 }
 
 .pouch {
@@ -248,8 +258,7 @@ ul {
   font-size: 50px;
   /* text-align: center; */
   text-decoration: underline;
-  margin-top: 20px;
-  margin-bottom: 75px;
+  margin: 75px 0;
 }
 
 #container main {
