--- a/_includes/index-template.njk
+++ b/_includes/index-template.njk
@@ -4,7 +4,7 @@ layout: main
 
 <div id="image-container">
   <div id="background-img"></div>
-  {# <div id="airplane"></div> #}
+  <div id="airplane"><div id="newsletter-label">newsletter</div> <img src="/images/newsletter-icon.png" width="83" height="83"/></div>
   <div id="foreground-img"></div>
   <div id="studio-head">
     <h1><a href="/"><img src="/images/pouch-studio.png" width="400" height="49"/></a></h1>
