--- a/_includes/main.njk
+++ b/_includes/main.njk
@@ -34,12 +34,12 @@
   <body>
     <div id="container">
       <nav id="studio-nav">
-        <a href="">info</a><br><br>
+        <a href="/info">info</a><br><br>
         <a href="/zines">zines</a><br>
         <a href="/machines">machines</a><br>
         <a href="/tools">tools</a><br>
         <a href="/essays">essays?</a><br><br>
-        <a href="">shop</a>
+        <a href="https://pouchcafe.gumroad.com/">shop</a>
       </nav>
       {{ content | safe }}
     </div>
