--- a/css/global.css
+++ b/css/global.css
@@ -80,6 +80,7 @@ ul {
   width: 1402px;
   height: 1070px;
   max-width: 100%;
+  overflow: hidden;
 }
 
 #background-img {
@@ -103,12 +104,165 @@ ul {
 }
 
 #airplane {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   height: 100px;
-  width: 100px;
   position: absolute;
-  top: 100px;
-  background-color: red;
+  top: 200px;
+  animation-duration: 10s;
+  animation-name: flight;
+  animation-iteration-count: infinite;
+  transform: scaleX(1) rotate(-7deg);
 }
+
+#airplane img {
+  height: 82.88px;
+  width: 82.88px;
+  animation: wiggle 3s linear infinite;
+  transform: rotate(-2deg);
+}
+
+#newsletter-label {
+  animation: wiggle2 3s linear infinite;
+  transform: rotate(1deg);
+}
+
+@keyframes wiggle {
+  from, to {
+    transform: rotate(-1deg);
+  }
+  25%, 75% {
+    transform: rotate(0);
+  }
+  50% {
+    transform: rotate(1deg);
+  }
+}
+
+@keyframes wiggle2 {
+  from, to {
+    transform: rotate(1deg);
+  }
+  25%, 75% {
+    transform: rotate(0);
+  }
+  50% {
+    transform: rotate(-1deg);
+  }
+}
+
+@keyframes flight {
+  0%, 100% {
+    left: 0;
+    transform: scaleX(1) rotate(-7deg);
+  }
+
+  10% {
+    top: 180px;
+    left: 20%;
+    transform: scaleX(1) rotate(-7deg);
+  }
+  11% {
+    transform: scaleX(1) rotate(2deg);
+  }
+
+  20% {
+    top: 280px;
+    left: 40%;
+    transform: scaleX(1) rotate(2deg);
+  }
+
+  21% {
+    top: 280px;
+    transform: scaleX(1) rotate(-7deg);
+  }
+
+  30% {
+    top: 200px;
+    left: 60%;
+    transform: scaleX(1) rotate(-7deg);
+  }
+
+  31% {
+    top: 200px;
+    transform: scaleX(1) rotate(6deg);
+  }
+
+  40% {
+    top: 250px;
+    left: 80%;
+    transform: scaleX(1) rotate(6deg);
+  }
+
+  41% {
+    top: 250px;
+    transform: scaleX(1) rotate(-15deg);
+  }
+
+  50% {
+    top: 200px;
+    left: 100%;
+    transform: scaleX(1) rotate(-15deg);
+  }
+
+  51% {
+    top: 200px;
+    left: 100%;
+    transform: scaleX(-1) rotate(6deg);
+  }
+
+  60% {
+    top: 250px;
+    left: 80%;
+    transform: scaleX(-1) rotate(6deg);
+  }
+
+  61% {
+    top: 250px;
+    transform: scaleX(-1) rotate(-7deg);
+  }
+
+  70% {
+    top: 200px;
+    left: 60%;
+    transform: scaleX(-1) rotate(-7deg);
+  }
+
+  71% {
+    top: 200px;
+    transform: scaleX(-1) rotate(2deg);
+  }
+
+  80% {
+    top: 280px;
+    left: 40%;
+    transform: scaleX(-1) rotate(2deg);
+  }
+
+  81% {
+    top: 280px;
+    transform: scaleX(-1) rotate(-7deg);
+  }
+
+  90% {
+    top: 180px;
+    left: 20%;
+    transform: scaleX(-1) rotate(-7deg);
+  }
+
+  91% {
+    top: 200px;
+    transform: scaleX(-1) rotate(2deg);
+  }
+
+  99% {
+    left: 0;
+    transform: scaleX(-1) rotate(2deg);
+  }
+
+}
+
 
 #studio-head {
   line-height: 2;
