--- a/css/global.css
+++ b/css/global.css
@@ -4,6 +4,10 @@
 
   --topbottom-padding: 80px;
   --leftright-padding: 60px;
+
+  --airplane-width: 213px;
+  --nav-width: 200px;
+  --airplane-buffer: calc(var(--airplane-width) + var(--nav-width));
 }
 
 @font-face {
@@ -91,6 +95,7 @@ ul {
   background-size: 1202px 970px;
   background-position: 200px 20px;
   background-repeat: no-repeat;
+  z-index: 2;
 }
 
 #foreground-img {
@@ -101,141 +106,20 @@ ul {
   background-size: 1202px 970px;
   background-position: 200px 20px;
   background-repeat: no-repeat;
+  z-index: 20;
 }
 
-#airplane {
-  cursor: pointer;
-  display: inline-flex;
-  justify-content: center;
-  align-items: center;
-  height: 100px;
-  position: absolute;
-  left: -20%;
-  top: 200px;
-  animation-duration: 100s;
-  animation-name: flight;
-  animation-delay: 0.3s;
-  animation-iteration-count: infinite;
-  animation-timing-function: linear;
-  transform: scaleX(1) rotate(-7deg);
-}
-
-#airplane img {
-  height: 82.88px;
-  width: 82.88px;
-  animation: wiggle 3s linear infinite;
-  transform: rotate(-2deg);
-}
 
 #newsletter-label {
   animation: wiggle2 3s linear infinite;
   transform: rotate(1deg);
 }
 
-@keyframes wiggle {
-  from, to {
-    transform: rotate(-2deg);
-  }
-  25%, 75% {
-    transform: rotate(0);
-  }
-  50% {
-    transform: rotate(2deg);
-  }
-}
-
-@keyframes wiggle2 {
-  from, to {
-    transform: rotate(1deg);
-  }
-  25%, 75% {
-    transform: rotate(0);
-  }
-  50% {
-    transform: rotate(-1deg);
-  }
-}
-
-@keyframes flight {
-  0% {
-    left: -20%;
-    transform: scaleX(1) rotate(-7deg);
-    z-index: 1000;
-  }
-
-  12% {
-    top: 150px;
-    left: 20%;
-    transform: scaleX(1) rotate(-7deg);
-  }
-
-  13% {
-    transform: scaleX(1) rotate(7deg);
-  }
-
-  25% {
-    z-index: 0;
-  }
-
-  37% {
-    top: 300px;
-    left: 70%;
-    transform: scaleX(1) rotate(7deg);
-  }
-
-  38% {
-    top: 300px;
-    left: 70%;
-    transform: scaleX(1) rotate(0);
-  }
-  
-  50% {
-    left: 90%;
-    transform: scaleX(1) rotate(0);
-  }
-  51% {
-    left: 90%;
-    transform: scaleX(-1) rotate(0);
-  }
-
-
-  66% {
-    top: 300px;
-    left: 70%;
-    transform: scaleX(-1) rotate(0deg);
-  }
-
-  67%{
-    top: 300px;
-    left: 70%;
-    transform: scaleX(-1) rotate(-7deg);
-  }
-
-  88% {
-    top: 150px;
-    left: 20%;
-    transform: scaleX(-1) rotate(-7deg);
-  }
-
-  89% {
-    top: 150px;
-    left: 20%;
-    transform: scaleX(-) rotate(7deg);
-  }
-
-
-  99% {
-    left: -20%;
-    transform: scaleX(-1) rotate(7deg);
-  }
-  100% {
-    left: -20%;
-    transform: scaleX(1) rotate(-7deg);
-  }
-}
 
 #studio-head {
   line-height: 2;
+  z-index: 100;
+  position: relative;
 }
 
 #studio-head h1 {
@@ -265,7 +149,7 @@ ul {
 }
 
 #studio-nav {
-  position: fixed;
+  position: absolute;
   top: calc(var(--topbottom-padding) + 0.5 * var(--pouch-title-height));
   font-size: var(--pouch-nav-font-size);
   text-align: right;
@@ -290,6 +174,7 @@ ul {
   position: absolute;
   bottom: -180px;
   left: 70px;
+  z-index: 30;
 }
 
 #pouch-stack .pouch {
