--- a/_includes/index-template.njk
+++ b/_includes/index-template.njk
@@ -5,6 +5,7 @@ layout: main
 <div id="image-container">
   <div id="background-img"></div>
   <div id="foreground-img"></div>
+  <div id="monitor"></div>
   <div id="studio-head">
     <h1><a href="/"><img src="/images/pouch-studio.png" width="400" height="49"/></a></h1>
     <h2>software (&amp; non-software)<br>that loves paper</h2> 
