--- a/_includes/main.njk
+++ b/_includes/main.njk
@@ -39,7 +39,7 @@
         <a href="/machines">machines</a><br>
         <a href="/tools">tools</a><br>
         <a href="/essays">essays?</a><br><br>
-        <a href="https://pouchcafe.gumroad.com/">shop</a>
+        <a href="https://pouchcafe.gumroad.com/" target="_blank">shop</a>
       </nav>
       {{ content | safe }}
     </div>
