--- a/_includes/index-template.njk
+++ b/_includes/index-template.njk
@@ -6,6 +6,12 @@ layout: main
   <div id="background-img"></div>
   <div id="foreground-img"></div>
   <div id="monitor"></div>
+  <div id="mebubble">
+    <img src="/images/me-beep.png" id="me-beep" />
+  </div>
+  <div id="computerbubble">
+    <img src="/images/comp-boop.png" id="comp-boop"/>
+  </div>
   <div id="studio-head">
     <h1><a href="/"><img src="/images/pouch-studio.png" width="400" height="49"/></a></h1>
     <h2>software (&amp; non-software)<br>that loves paper</h2> 
