--- a/_includes/index-template.njk
+++ b/_includes/index-template.njk
@@ -7,10 +7,10 @@ layout: main
   <div id="foreground-img"></div>
   <div id="monitor"></div>
   <div id="mebubble">
-    <img src="/images/me-beep.png" id="me-beep" />
+    <img src="/images/me-beep.png" id="me-beep" hidden/>
   </div>
   <div id="computerbubble">
-    <img src="/images/comp-boop.png" id="comp-boop"/>
+    <img src="/images/comp-boop.png" id="comp-boop" hidden/>
   </div>
   <div id="studio-head">
     <h1><a href="/"><img src="/images/pouch-studio.png" width="400" height="49"/></a></h1>
