--- a/_includes/index-template.njk
+++ b/_includes/index-template.njk
@@ -8,9 +8,11 @@ layout: main
   <div id="monitor"></div>
   <div id="mebubble">
     <img src="/images/me-beep.png" id="me-beep" hidden/>
+    <img src="/images/me-exclaim.png" id="me-exclaim" hidden/>
   </div>
   <div id="computerbubble">
     <img src="/images/comp-boop.png" id="comp-boop" hidden/>
+    <img src="/images/comp-exclaim.png" id="comp-exclaim" hidden/>
   </div>
   <div id="studio-head">
     <h1><a href="/"><img src="/images/pouch-studio.png" width="400" height="49"/></a></h1>
