tweak for macbook air

--- a/_includes/index-template.njk
+++ b/_includes/index-template.njk
@@ -9,10 +9,12 @@ layout: main
   <div id="mebubble">
     <img src="/images/me-beep.png" id="me-beep" hidden/>
     <img src="/images/me-exclaim.png" id="me-exclaim" hidden/>
+    <img src="/images/me-lovepaper.png" id="me-lovepaper" hidden/>
   </div>
   <div id="computerbubble">
     <img src="/images/comp-boop.png" id="comp-boop" hidden/>
     <img src="/images/comp-exclaim.png" id="comp-exclaim" hidden/>
+    <img src="/images/comp-metoo.png" id="comp-metoo" hidden/>
   </div>
   <div id="studio-head">
     <h1><a href="/"><img src="/images/pouch-studio.png" width="400" height="49"/></a></h1>
