--- a/css/global.css
+++ b/css/global.css
@@ -8,6 +8,9 @@
   --airplane-width: 213px;
   --nav-width: 200px;
   --airplane-buffer: calc(var(--airplane-width) + var(--nav-width));
+
+  --main-img-top-offset: 100px;
+  --main-img-left-offset: 180px;
 }
 
 @font-face {
@@ -82,8 +85,8 @@ ul {
 
 #image-container {
   position: relative;
-  width: 1402px;
-  height: 1070px;
+  width: calc(1202px + var(--main-img-left-offset));
+  height: calc(970px + var(--main-img-top-offset));
   max-width: 100%;
 }
 
@@ -93,7 +96,7 @@ ul {
   width: 100%;
   background-image: url(/images/background.png);
   background-size: 1202px 970px;
-  background-position: 200px 20px;
+  background-position: var(--main-img-left-offset) var(--main-img-top-offset);
   background-repeat: no-repeat;
   z-index: 2;
 }
@@ -104,7 +107,7 @@ ul {
   width: 100%;
   background-image: url(/images/foreground.png);
   background-size: 1202px 970px;
-  background-position: 200px 20px;
+  background-position: var(--main-img-left-offset) var(--main-img-top-offset);
   background-repeat: no-repeat;
   z-index: 20;
 }
@@ -113,8 +116,8 @@ ul {
   position: absolute;
   aspect-ratio: 777 / 999;
   width: 650px;
-  left: 950px;
-  top: 400px;
+  left: calc(750px + var(--main-img-left-offset));
+  top: calc(380px + var(--main-img-top-offset));
   background-image: url(/images/monitor.png);
   background-size: cover;
   background-position: center;
@@ -163,7 +166,7 @@ ul {
 
 #studio-nav {
   position: absolute;
-  top: calc(var(--topbottom-padding) + 0.5 * var(--pouch-title-height));
+  top: calc(var(--topbottom-padding));
   font-size: var(--pouch-nav-font-size);
   text-align: right;
   right: var(--leftright-padding);
@@ -185,7 +188,7 @@ ul {
 
 #pouch-stack {
   position: absolute;
-  bottom: -180px;
+  bottom: calc(-300px - var(--main-img-top-offset));
   left: calc(45px + var(--leftright-padding));
   z-index: 30;
 }
@@ -297,24 +300,22 @@ p {
 #mebubble {
   position: absolute;
   z-index: 40;
-  left: 820px;
   bottom: 620px;
+  left: calc(620px + var(--main-img-left-offset));
 }
 
 #computerbubble {
   position: absolute;
   z-index: 40;
-  left: 1150px;
-  bottom: 575px;
+  bottom: 495px;
+  left: calc(950px + var(--main-img-left-offset));
 }
 
-#me-beep,
-#me-exclaim {
+#mebubble img {
   width: 225px;
 }
 
-#comp-boop,
-#comp-exclaim {
+#computerbubble img {
   width: 190px;
 }
 
