--- a/_includes/index-template.njk
+++ b/_includes/index-template.njk
@@ -8,13 +8,20 @@ layout: main
   <div id="monitor"></div>
   <div id="mebubble">
     <img src="/images/me-beep.png" id="me-beep" hidden/>
+    <img src="/images/me-boop.png" id="me-boop" hidden/>
     <img src="/images/me-exclaim.png" id="me-exclaim" hidden/>
     <img src="/images/me-lovepaper.png" id="me-lovepaper" hidden/>
+    <img src="/images/me-note.png" id="me-note" hidden/>
+    <img src="/images/me-oop.png" id="me-oop" hidden/>
   </div>
   <div id="computerbubble">
+    <img src="/images/comp-beep.png" id="comp-beep" hidden/>
     <img src="/images/comp-boop.png" id="comp-boop" hidden/>
     <img src="/images/comp-exclaim.png" id="comp-exclaim" hidden/>
+    <img src="/images/comp-fire1.png" id="comp-fire1" hidden/>
+    <img src="/images/comp-fire2.png" id="comp-fire2" hidden/>
     <img src="/images/comp-metoo.png" id="comp-metoo" hidden/>
+    <img src="/images/comp-note.png" id="comp-note" hidden/>
   </div>
   <div id="studio-head">
     <h1><a href="/"><img src="/images/pouch-studio.png" width="400" height="49"/></a></h1>
