--- a/_includes/index-template.njk
+++ b/_includes/index-template.njk
@@ -34,21 +34,31 @@ layout: main
     <div class="pouch"></div>
     <div class="pouch"></div>
     <div class="pouch"></div>
+
     <div class="pouch"></div>
     <div class="pouch"></div>
     <div class="pouch"></div>
     <div class="pouch"></div>
     <div class="pouch"></div>
+    
     <div class="pouch"></div>
     <div class="pouch"></div>
     <div class="pouch"></div>
     <div class="pouch"></div>
     <div class="pouch"></div>
+    
     <div class="pouch"></div>
     <div class="pouch"></div>
     <div class="pouch"></div>
     <div class="pouch"></div>
-    <div class="pouch"></div>
+
+    <div id= "top-pouch" class="card">
+      <div class="under-pouch-cover"></div>
+      <div class="content">
+        <div class="front pouch-cover"></div>
+        <div class="back pouch-cover"></div>
+      </div>
+    </div>
   </div>
 </div>
 
