--- a/css/global.css
+++ b/css/global.css
@@ -177,6 +177,63 @@ ul {
   background-color: white;
 }
 
+.card {
+  position: absolute;
+  width: 264px;
+  height: 375px;
+  transform: rotate(-18deg);
+}
+
+.content {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  transform-origin: 0% 0%;
+
+  transition: transform 1s;
+  transform-style: preserve-3d;
+}
+
+.card:hover .content {
+  transform: rotateY( -180deg );
+  transition: transform 0.5s;
+}
+
+.under-pouch-cover,
+.front,
+.back {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  backface-visibility: hidden;
+}
+
+.back {
+  transform: rotateY( 180deg );
+}
+
+#top-pouch {
+  float: left;
+  perspective: 1500px;
+}
+
+.pouch-cover {
+  background-image: url(/images/pouch-stack.png);
+  background-size: cover;
+  width: 264px;
+  height: 375px;
+  background-repeat: no-repeat;
+}
+
+.under-pouch-cover {
+  /* background-image: url(/images/pouch-stack.png); */
+  background-color: white;
+  background-size: cover;
+  width: 264px;
+  height: 375px;
+  background-repeat: no-repeat;
+}
+
 .pouch {
   background-image: url(/images/pouch-stack.png);
   background-size: cover;
@@ -275,8 +332,8 @@ ul {
   left: 2px;
 }
 
-#pouch-stack .pouch:nth-child(20) {
-  bottom: 580px;
+#pouch-stack #top-pouch {
+  bottom:600px;
 }
 
 #container main h1 {
