--- a/_includes/main.njk
+++ b/_includes/main.njk
@@ -39,7 +39,12 @@
         <a href="/machines">machines</a><br>
         <a href="/tools">tools</a><br>
         <a href="/essays">essays?</a><br><br>
-        <a href="https://pouchcafe.gumroad.com/" target="_blank">shop</a>
+        <a href="https://pouchcafe.gumroad.com/" target="_blank">shop</a><br><br>
+      </nav>
+      <nav id="social-nav">
+        <span>victoriakirst@gmail.com</span> .
+        <a href="https://vrklovespaper.substack.com/" target="_blank">newsletter</a> .
+        <a href="https://instagram.com/pouch.studio" target="_blank">instagram</a>
       </nav>
       {{ content | safe }}
     </div>
