--- a/_includes/main.njk
+++ b/_includes/main.njk
@@ -38,6 +38,7 @@
         <a href="/zines">zines</a><br>
         <a href="/machines">machines</a><br>
         <a href="/tools">tools</a><br>
+        <a href="/crafts">crafts</a><br>
         <a href="/essays">essays?</a><br><br>
         <a href="https://pouchcafe.gumroad.com/" target="_blank">shop</a><br><br>
       </nav>
