--- a/css/global.css
+++ b/css/global.css
@@ -227,12 +227,14 @@ nav a, nav span {
   perspective: 1500px;
 }
 
+.pouch,
 .pouch-cover {
-  background-image: url(/images/pouch-stack.png);
+  background-image: url(/images/cover.png);
   background-size: cover;
   width: 264px;
   height: 375px;
   background-repeat: no-repeat;
+  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 .under-pouch-cover {
@@ -245,11 +247,6 @@ nav a, nav span {
 }
 
 .pouch {
-  background-image: url(/images/pouch-stack.png);
-  background-size: cover;
-  width: 264px;
-  height: 375px;
-  background-repeat: no-repeat;
   transform: rotate(-18deg);
 }
 
