--- a/_includes/main.njk
+++ b/_includes/main.njk
@@ -48,6 +48,7 @@
         <a href="https://instagram.com/pouch.studio" target="_blank">instagram</a>
       </nav>
       {{ content | safe }}
+      <footer></footer>
     </div>
   </body>
 </html>
