--- a/css/global.css
+++ b/css/global.css
@@ -136,6 +136,7 @@ ul {
   z-index: 100;
   position: relative;
   padding: var(--topbottom-padding) var(--leftright-padding);
+  padding-bottom: 0;
 }
 
 #studio-head h1 {
@@ -348,18 +349,21 @@ nav a, nav span {
   /* text-align: center; */
   text-decoration: underline;
   margin: 75px 0;
+  margin-bottom: 0;
+}
+
+#container main h2 {
+  margin-top: 75px;
+  margin-bottom: 0px;
+  position: relative;
 }
 
 #container main {
   /* margin: auto; */
-  max-width: 800px;
+  max-width: 1000px;
   /* border: 2px solid black; */
-  padding: var(--topbottom-padding) var(--leftright-padding);
-}
-
-p {
-  margin-top: 2em;
-  margin-bottom: 2em;
+  padding-left: var(--leftright-padding);
+  padding-right: 200px;
 }
 
 #mebubble {
@@ -394,6 +398,10 @@ p {
   width: 330px;
   position: relative;
   right: 130px;
+}
+
+footer {
+  height: 50px;
 }
 
 [hidden] { display: none !important; }
