--- a/css/global.css
+++ b/css/global.css
@@ -236,6 +236,10 @@ nav a, nav span {
   box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
 }
 
+.shadowed {
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.25);
+}
+
 .under-pouch-cover {
   /* background-image: url(/images/pouch-stack.png); */
   background-color: white;
@@ -398,8 +402,54 @@ nav a, nav span {
   right: 130px;
 }
 
+.display-table {
+  display: grid;
+  grid-template-columns: max-content auto;
+  gap: 50px;
+  margin-top: 50px;
+  justify-content: flex-start;
+}
+
+.display-table .display-cover {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  min-height: 250px;
+}
+
+.display-cover img {
+  max-width: 100%;
+  max-height: 100%;
+}
+
+#container main .display-desc h2 {
+  margin: 0;
+}
+
 footer {
   height: 50px;
 }
+
+:root {
+  --pouch-cover-width: 250px;
+}
+
+#display-pouch-cover {
+  width: var(--pouch-cover-width);
+}
+
+#display-rprpg-cover {
+  width: calc(0.73 * var(--pouch-cover-width));
+}
+
+#display-sharktank-cover {
+  width: calc(0.46 * var(--pouch-cover-width));
+}
+
+#display-toaster-cover {
+  width: calc(0.47 * var(--pouch-cover-width));
+}
+
 
 [hidden] { display: none !important; }
