--- a/_includes/main.njk
+++ b/_includes/main.njk
@@ -33,22 +33,26 @@
 
   <body>
     <div id="container">
+      <div id="studio-head">
+        <h1><a href="/"><img src="/images/pouch-studio.png" /></a></h1>
+        <h2>software (&amp; non-software)<br>that loves paper</h2> 
+      </div>
       <nav id="studio-nav">
-        <a href="/info">info</a><br><br>
-        <a href="/zines">zines</a><br>
-        <a href="/machines">machines</a><br>
-        <a href="/tools">tools</a><br>
-        <a href="/crafts">crafts</a><br>
-        <a href="/essays">essays?</a><br><br>
-        <a href="https://pouchcafe.gumroad.com/" target="_blank">shop</a><br><br>
+        <a href="/info" class="space-beneath">info</a>
+        <a href="/zines">zines</a>
+        <a href="/machines">machines</a>
+        <a href="/tools">tools</a>
+        <a href="/crafts">crafts</a>
+        <a href="/essays">essays?</a>
+        <a href="https://pouchcafe.gumroad.com/" class="space-above" target="_blank">shop</a>
       </nav>
+      {{ content | safe }}
+      <footer></footer>
       <nav id="social-nav">
         <span>victoriakirst@gmail.com</span> .
         <a href="https://vrklovespaper.substack.com/" target="_blank">newsletter</a> .
         <a href="https://instagram.com/pouch.studio" target="_blank">instagram</a>
       </nav>
-      {{ content | safe }}
-      <footer></footer>
     </div>
   </body>
 </html>
